--- a/NASA Client/Podfile
+++ b/NASA Client/Podfile
@@ -8,4 +8,6 @@ target 'NASA Client' do
   # Pods for NASA Client
   pod 'Kingfisher', '~> 6.0' 
   pod 'RealmSwift'
+  pod 'Moya', '~> 14.0'
+  pod "PromiseKit", "~> 6.8"
 end
