--- a/NASA Client/Podfile
+++ b/NASA Client/Podfile
@@ -10,4 +10,5 @@ target 'NASA Client' do
   pod 'RealmSwift'
   pod 'Moya', '~> 14.0'
   pod "PromiseKit", "~> 6.8"
+  pod 'NVActivityIndicatorView'
 end
